--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <header>
                 <div class="container">
                     <img src="img/netflix.png" alt="logo" @click="homeButton()" />
-                    <a href="" @click="homeButton()">Home</a>
+                    <a href="#" @click="homeButton()">Home</a>
                     <a href="#">Film</a>
                     <a href="#">Serie Tv</a>                    
                 </div>
